# Diffumoji

./: .gitignore  dataset.py  diffusion.py  inference.py  main.py  pyproject.toml  unet.py
scripts/: build_dataset.py  prepare_data.py
